# mdp_query_generator

./: .gitignore  1  12-g  12-p  13-g  13-p  2  33-g  33-p  39-g  39-p  4-g  4-p  45-g  45-p  48-g  48-p  53-g  53-p  56-g  56-p  6-g  6-p  67-g  67-p  68-g  68-p  77-g  77-p  8-g  8-p  82-g  82-p  83-g  83-p  88-g  88-p  Cargo.toml  README.md  aggregate_functions_distribution_map.json  (+31 more)
configs/: chatgpt_prompting_config.toml  config.toml  only_queries_config.toml  only_queries_config_tpcds.toml  prompt_testing_config.toml  rl_envoronment.toml  run_model_config.toml  test_ast2path.toml  test_semantic_correctness.toml  test_single_ast2path.toml  test_syntax_coverage.toml  training_config.toml
examples/: eq_test.rs  query_creation.rs
experiment_scripts/: add_explain.py  count_ast_nodes.py  evaluate_speed_per_anticall_value.py  evaluate_time_per_anticall_value.py  generate_latex_mean_nodes_per_level.py  grid_search_anticall_values.sh  time_all.sh  time_anticall_values.sh
illustrations/: decision_deps.dot  decision_purging.dot  numeric_formula_ast.dot  numeric_formula_graph.dot  paper_illustrations.dot  subgraph_modifiers.dot  subgraph_separation.dot  unwinding_cycles.dot  unwinding_cycles_paper.dot
llm_prompts/: chatgpt_prompts.toml
old_code/: old_ast_to_path.rs  random_query_generator_old.rs  random_query_generator_old2.rs  select_continue_after.rs
pyo3-env-wrapper/: Cargo.toml  main.py  pyproject.toml
query-generator-graph/: app-graph.dot  graph_edited.dot
sample_sqls/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  3.sql  4.sql  5.sql  6.json  6.sql  7.json  7.sql  8.sql  9.sql
schema/: example_data.sql  tpc-h_constraints.sql  tpc-h_tables.sql  tpch_queries.sql
scripts/: extract_spider_schemas.sh  extract_sqlite_schema.sh
src/: config.rs  equivalence_testing_function.rs  helper_macros.rs  helpers.rs  lib.rs  main.rs  query_creation.rs  query_creation_helpers.rs  training.rs
training_dbs/: all_default_queries.sql  untrained_db.sql  untrained_with_wildcards_and_multiple_tables_in_from.sql
(+121 files in other folders)
