[package]
name = "equivalence_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { path = "../sqlparser-rs" }
rand_chacha = "0.3.1"
take-until = "0.2.0"
smol_str = "0.1.23"
structopt = "0.3"
logaddexp="0.1.2"
logos = "0.12.1"
rand = "0.8.5"
toml = "0.7.6"  # Replace with the latest version available
regex = "1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"