[package]
name = "equivalence_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.193", features=["derive"] }
tokio = { version = "1.37.0", features = ["rt"] }
sqlparser = { path = "../sqlparser-rs" }
serde_json = "1.0.85"
rand_chacha = "0.3.1"
chatgpt_rs = "1.2.3"
take-until = "0.2.0"
itertools = "0.12.1"
smol_str = "0.1.23"
logaddexp = "0.1.2"
bincode = "1.3.3"
postgres = "0.19"
structopt = "0.3"
logos = "0.12.1"
rand = "0.8.5"
toml = "0.7.6"
regex = "1"
