[package]
name = "equivalence_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "equivalence_testing"
path = "src/lib.rs"

[dependencies]
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
rust_decimal = { version = "1.37", features = ["db-postgres"] }
serde = { version="1.0.193", features=["derive"] }
tokio = { version = "1.37.0", features = ["rt"] }
sqlparser = { path = "../sqlparser-rs" }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
serde_json = "1.0.85"
rand_chacha = "0.3.1"
chatgpt_rs = "1.2.3"
take-until = "0.2.0"
itertools = "0.12.1"
smol_str = "0.1.23"
logaddexp = "0.1.2"
rand_distr = "0.4"
bincode = "1.3.3"
structopt = "0.3"
logos = "0.12.1"
chrono = "0.4"
rand = "0.8.5"
toml = "0.7.6"
bimap = "0.6"
regex = "1"
